<resources>
    <string name="app_name">Layouting Digiteam</string>
    <string name="desc">Digital Together Everyone Achieve More</string>
    <string name="jabar">Jabar Digital Service</string>
    <string name="name">Dias Eka Fredianto, S.Kom, B.IT</string>
    <string name="skill">UI Designer</string>
    <string name="name2">Dias Eka Fredianto, S.Kom, B.IT</string>
    <string name="title_jam">Jam Kerja Bulan Ini</string>
    <string name="jam_kerja">Jam kerja kamu bulan ini: 130.53 Jam</string>
    <string name="batas_kerja">Batas Minimum Jam Kerja 170 jam/bulan</string>
    <string name="laporan">Laporan Kamu</string>
    <string name="maret">Maret</string>
    <string name="april">April </string>
    <string name="izin">Izin </string>
    <string name="kehadiran">Kehadiran </string>
    <string name="report">Laporan </string>
    <string name="agenda">Agenda </string>
    <string name="booking">Booking </string>
    <string name="wiki">Wiki </string>

</resources>